# DieuKhienTayGap

./: code_main.ino  main.py
App/Taygap/: settings.gradle
App/Taygap/app/: build.gradle  google-services.json
App/Taygap/app/src/androidTest/java/com/example/taygap/: ExampleInstrumentedTest.java
App/Taygap/app/src/main/: AndroidManifest.xml
App/Taygap/app/src/main/java/com/example/taygap/: FirstFragment.java  Ham.java  MainActivity.java  (+3 more)
App/Taygap/app/src/main/res/drawable/: background_bo4goc_lam.xml  click_button.xml  ic_baseline_architecture_24.xml  ic_baseline_arrow_drop_down_24.xml  ic_baseline_arrow_drop_up_24.xml  ic_baseline_arrow_left_24.xml  ic_baseline_arrow_right_24.xml  nen_xam.xml
App/Taygap/app/src/main/res/layout/: activity_main.xml
App/Taygap/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_taygap_round.xml
App/Taygap/app/src/main/res/navigation/: nav_graph.xml
App/Taygap/app/src/main/res/values/: colors.xml  ic_launcher_taygap_background.xml  strings.xml  styles.xml  themes.xml
App/Taygap/app/src/main/res/values-night/: themes.xml
App/Taygap/gradle/wrapper/: gradle-wrapper.properties
AppClient/: CMakeLists.txt  CMakeLists.txt.user.0d79380  ContentBar.qml  Home.qml  ItemHome.qml  Live.qml  Main.qml  Resource.qrc  Setting.qml  Source.qrc  backend.cpp  backend.h  component.qml  componentSwitch.qml  homeExemple.qml  main.cpp
AppClient/translations/: qt_hu.qm
AppServer/: CMakeLists.txt  CMakeLists.txt.user.0d79380  image.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
arduino/: codeAruduino.ino
esp8266Client/lib/tcpClient/src/: congTac.cpp  congTac.h  tcpClient.cpp  tcpClient.h
esp8266Client/src/: main.cpp
(+2 files in other folders)
